# realspace-tb

./: .gitignore  LICENSE  README.md  index.html  mypy.ini  pyproject.toml  realspace_tb.html  search.js
.github/workflows/: docs.yaml  docs.yml  publish.yml
docs/: realspace_tb.html
docs/realspace_tb/: orbitronics_2d.html
examples/: custom_observable.ipynb  quickstart.ipynb
realspace_tb/: __init__.py  backend.html  backend.py  hamiltonian.py  observable.py  orbitronics_2d.html  rk4.py
realspace_tb/orbitronics_2d/: __init__.py  homogeneous_field_hamiltonian.py  honeycomb_geometry.py  lattice_2d_geometry.py  observables.html  observables.py  ohc.html  ohc.py  plot_utils.py
